objects/RMA__c.object
<CustomObject>
  <fields>
        <fullName>Delay_in_Replacement_Reason__c</fullName>
        <label>Delay in Replacement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Delayed_Replacement__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supply constraint</fullName>
                </value>
                <value>
                    <fullName>Warehouse error</fullName>
                </value>
                <value>
                    <fullName>Carrier Issue</fullName>
                </value>
                <value>
                    <fullName>SPWR processing</fullName>
                </value>
                <value>
                    <fullName>Partner Delay</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Customer Master Issue</fullName>
                </value>
                <value>
                    <fullName>Weather Issue (Force Majeure)</fullName>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                </value>
                <value>
                    <fullName>Carrier error</fullName>
                    <isActive>false</isActive>
                    <label>Carrier error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Delay_in_Return_Reason__c</fullName>
        <label>Delay in Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Delayed_Return__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SPWR processing</fullName>
                </value>
                <value>
                    <fullName>Warehouse error</fullName>
                </value>
                <value>
                    <fullName>Carrier Issue</fullName>
                </value>
                <value>
                    <fullName>Replacement not installed in time</fullName>
                </value>
                <value>
                    <fullName>Partner delay</fullName>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                </value>
                <value>
                    <fullName>Homeowner Delay</fullName>
                </value>
                <value>
                    <fullName>Year-End Inventory</fullName>
                </value>
                <value>
                    <fullName>Weather Issue (Force Majeure)</fullName>
                </value>
                <value>
                    <fullName>Carrier error</fullName>
                    <isActive>false</isActive>
                    <label>Carrier error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Homeowner__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <label>Homeowner</label>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Oracle_Vendor_Number__c</fullName>
        <description>Oracle Vendor Number from Account</description>
        <formula>Case__r.Partner_Name__r.Oracle_Vendor_Number__c</formula>
        <label>Oracle Vendor Number</label>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Proof_of_Return_upload_link__c</fullName>
        <formula>HYPERLINK('/apex/S3Upload?Id=' + Id + '&amp;redirectId=apex/Returns&amp;LinkField=Proof_of_Return__c' , 'Upload' , '_self')</formula>
        <label>Upload</label>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>ReturnWarehouse__c</fullName>
        <label>Return Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>C21 - Rialto</fullName>
                </value>
                <value>
                    <fullName>FA - W05 - MRB – Austin, TX</fullName>
                </value>
                <value>
                    <fullName>FA - W05 - MRB – Richmond, CA</fullName>
                </value>
                <value>
                    <fullName>FA - W05 - MRB - San Jose, CA</fullName>
                </value>
                <value>
                    <fullName>Vendor (ABB) - W05 - RMA-PWR</fullName>
                </value>
                <value>
                    <fullName>Vendor (SMA) - W05 - RMA-SMA</fullName>
                </value>
                <value>
                    <fullName>Vendor (Zyxel) - W05 - RTV-RWK</fullName>
                </value>
                <value>
                    <fullName>W02 - Hayward</fullName>
                </value>
                <value>
                    <fullName>W04 - Cranbury</fullName>
                </value>
                <value>
                    <fullName>W21 - Hawaii</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <listViews>
        <fullName>RMAs_Awaiting_Return</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 5 and 6)OR(1 AND 2 AND 4 AND 5)</booleanFilter>
        <columns>RMANumber__c</columns>
        <columns>Homeowner__c</columns>
        <columns>Return_SO__c</columns>
        <columns>Return_Deadline__c</columns>
        <columns>Pick_up_Carrier__c</columns>
        <columns>Return_Documents__c</columns>
        <columns>Proof_of_Return__c</columns>
        <columns>Proof_of_Return_upload_link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RMA_Status_Category__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Receipt_Date_of_Return_Units__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Delivery_Date_of_Replacement_unit_s__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Disposition__c</field>
            <operation>equals</operation>
            <value>Returned-Credit,Return-No Credit</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Disposition__c</field>
            <operation>notEqual</operation>
            <value>Scrapped</value>
        </filters>
        <label>RMAs Awaiting Return</label>
        <language>en_US</language>
		<sharedTo>
			<allPartnerUsers/>
		</sharedTo>
    </listViews>
  <recordTypes>
        <fullName>RMA_Layout_After_Edit</fullName>
        <active>true</active>
        <description>This Record Type will come up once current user save the record</description>
        <label>RMA Layout After Edit</label>
    </recordTypes>
</CustomObject>